# PXC-Core

./: Bootstrap.cpp  CMakeLists.txt
pxcactor/: CMakeLists.txt
pxcactor/example/: example.cpp
pxcactor/pxc/actor/: ConcurrentScheduler.cpp  ConcurrentScheduler.h  MultiPromise.cpp  MultiPromise.h  MultiTimeout.cpp  MultiTimeout.h  PromiseFuture.h  SchedulerLocalStorage.h  SignalSlot.h  SleepActor.h  Timeout.h  actor.h
pxcactor/pxc/actor/impl/: Actor-decl.h  Actor.h  ActorId-decl.h  ActorId.h  ActorInfo-decl.h  ActorInfo.h  Event.h  EventFull-decl.h  EventFull.h  Scheduler-decl.h  Scheduler.cpp  Scheduler.h
pxcactor/test/: actors_bugs.cpp  actors_main.cpp  actors_simple.cpp  actors_workers.cpp
pxcnet/: CMakeLists.txt
pxcnet/pxc/net/: Epoll.cpp  Epoll.h  InboundConnection.cpp  InboundConnection.h  OutBoundConnection.cpp  OutBoundConnection.h  PollFlags.cpp  PollFlags.h  Socket.cpp  Socket.h  Socks5.cpp  Socks5.h  TcpListener.cpp  TcpListener.h  TransparentProxy.cpp  TransparentProxy.h  types.h
pxcutils/: CMakeLists.txt
pxcutils/pxc/utils/: AesCtrByteFlow.h  AsyncFileLog.cpp  AsyncFileLog.h  AtomicRead.h  BigNum.cpp  BigNum.h  BufferedFd.h  BufferedReader.h  BufferedUdp.cpp  BufferedUdp.h  ByteFlow.h  CancellationToken.h  ChainScheduler.h  ChangesProcessor.h  Closure.h  CombinedLog.h  ConcurrentHashTable.h  Container.h  Context.h  DecTree.h  Destructor.h  Enumerator.h  EpochBasedMemoryReclamation.h  ExitGuard.cpp  ExitGuard.h  FileLog.cpp  FileLog.h  FlatHashMap.h  FlatHashMapChunks.h  FlatHashSet.h  FlatHashTable.cpp  FlatHashTable.h  FloodControlFast.h  FloodControlGlobal.cpp  FloodControlGlobal.h  FloodControlStrict.h  Gzip.cpp  Gzip.h  GzipByteFlow.cpp  GzipByteFlow.h  (+124 more)
pxcutils/pxc/utils/port/: Clocks.cpp  Clocks.h  CxCli.h  EventFd.h  EventFdBase.h  FileFd.cpp  FileFd.h  FromApp.h  IPAddress.cpp  IPAddress.h  IoSlice.h  MemoryMapping.cpp  MemoryMapping.h  Mutex.h  Poll.h  PollBase.h  PollFlags.cpp  PollFlags.h  RwMutex.h  ServerSocketFd.cpp  ServerSocketFd.h  SocketFd.cpp  SocketFd.h  Stat.cpp  Stat.h  StdStreams.cpp  StdStreams.h  UdpSocketFd.cpp  UdpSocketFd.h  config.h  path.cpp  path.h  platform.cpp  rlimit.cpp  rlimit.h  signals.cpp  signals.h  sleep.cpp  sleep.h  stacktrace.cpp  (+10 more)
pxcutils/pxc/utils/port/detail/: Epoll.cpp  Epoll.h  EventFdBsd.cpp  EventFdBsd.h  EventFdLinux.cpp  EventFdLinux.h  EventFdWindows.cpp  EventFdWindows.h  Iocp.cpp  Iocp.h  KQueue.cpp  KQueue.h  NativeFd.cpp  NativeFd.h  Poll.cpp  Poll.h  PollableFd.h  Select.cpp  Select.h  ThreadIdGuard.cpp  ThreadIdGuard.h  ThreadPthread.cpp  ThreadPthread.h  ThreadStl.h  WineventPoll.cpp  WineventPoll.h  skip_eintr.h
test/: CMakeLists.txt  ProxyTest.cpp  SocketFdTest.cpp  TestPollFlags.cpp  c1.cpp  crypto.cpp
